--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,30 @@
 [DEFAULT]
 AccessType = OnPremise
 SignOfLifeLog = 1
-CustomName = 3EM_OG
-DeviceInstance = 42
+SignOfLifeLog2 = 1
+SignOfLifeLog3 = 1
+CustomName = Shelly 3EM DachPV
+DeviceInstance = 40
+CustomName2 = Shelly 3EM BalkonPV
+DeviceInstance2 = 41
+CustomName3 = Shelly 3EM Victron
+DeviceInstance3 = 42
 # Role Could be pvinverter or grid
-Role = grid
+Role = pvinverter
+Role2 = pvinverter
+Role3 = grid
 # Available Postions: 0 = AC, 1 = AC-Out 1, AC-Out 2
 Position = 0
+Position2 = 0
+Position3 = 1
 
 [ONPREMISE]
-Host=192.168.178.236
+Host=192.168.144.141
+Host2=192.168.144.142
+Host3=192.168.144.143
 Username=
 Password=
+Username2=
+Password2=
+Username3=
+Password3=
